--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
     "id": "tyto",
     "packaging_format": 1,
     "description": {
-        "en": "tyto is an extensible and customizable management and organisation tool"
+        "en": "tyto is an extensible and customizable management and organisation tool",
+        "fr": "tyto est un outil d'organisation et de gestion personalisable et extensible"
     },
     "version": "3.0.4",
     "url": "https://github.com/jh3y/tyto",
