--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,13 +1,14 @@
-location __PATH__ {
+#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
+location __PATH__/ {
 
   # Path to source
   alias __FINALPATH__/ ;
 
+  # Force usage of https
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
 
-  # Example PHP configuration (remove if not used)
   index index.php index.html;
 
   # Common parameter to increase upload size limit in conjuction with dedicated php-fpm file
